--- a/apps/vmware/roles/workload/tasks/lb/load/cpulimit_host/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/cpulimit_host/setup.yml
@@ -5,7 +5,8 @@
     src: roles/workload/files/inf-loop.sh
     dest: /usr/local/bin/inf-loop.sh
     mode: 0755
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   delegate_to: prme-nsx-perf-00{{ prme_id }}
 
 - name: copy inf-loop-cpulimit.sh script
@@ -13,7 +14,8 @@
     src: roles/workload/files/inf-loop-cpulimit.sh
     dest: /usr/local/bin/inf-loop-cpulimit.sh
     mode: 0755
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   delegate_to: prme-nsx-perf-00{{ prme_id }}
 
 - name: copy inf-loop-cpulimit-rand.sh script
@@ -21,10 +23,12 @@
     src: roles/workload/files/inf-loop-cpulimit-rand.sh
     dest: /usr/local/bin/inf-loop-cpulimit-rand.sh
     mode: 0755
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   delegate_to: prme-nsx-perf-00{{ prme_id }}
 
 - name: run inf-loop-cpulimit-rand.sh script
   shell: inf-loop-cpulimit-rand.sh $(({{ workload.lb.load.cpulimit_host.base_seed }} + {{ prme_id }}{{ vm_id }})) {{ workload.lb.load.cpulimit_host.processes_per_core }} {{ workload.lb.load.cpulimit_host.percentage }} {{ workload.lb.load.cpulimit_host.cores }} 2 {{ workload.lb.load.cpulimit_host.sleep }} &
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   delegate_to: prme-nsx-perf-00{{ prme_id }}
