--- a/apps/vmware/vars/feedback.yml
+++ b/apps/vmware/vars/feedback.yml
@@ -14,3 +14,18 @@ feedback:
         memcachednode: "true"
       prme9-k8s-node-120:
         memcachednode: "true"
+  zeromq_broker:
+    node: "prme1-k8s-node-120"
+    port: 12345
+    topic: zeromq
+    subs:
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 120
