--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -3,8 +3,8 @@
 workload:
   lb:
     apache_servers:
-      replicas: 2
-      replicas_per_node: 2
+      replicas: 14
+      replicas_per_node: 7
       namespace: default
       policy: wlc
       feedback:
@@ -14,13 +14,13 @@ workload:
             broker:
               address: 192.168.1.120
               port: 12345
-            timeout: 1
+            timeout: 0.02
             group: zeromq
             param: 0.5 # Options: [cpu:alpha_value]
           dish:
             broker:
               port: 12345
-            timeout: 1
+            timeout: 0.02
             group: zeromq
 #        memcached:
 #          namespace: default
@@ -28,12 +28,12 @@ workload:
 #          metric: cpu  # Options: cpu, loadavg
 #          param: 0.5   # Options: [cpu:alpha_value], [loadavg:max_load]
     httperf_clients:
-      replicas: 1
+      replicas: 7
       namespace: default
       uri: /cgi-bin/cpu.py?loop_count=1 # /index.html, /cgi-bin/cpu.py?loop_count=1
-      num_conns: "300"
+      num_conns: "{{ 2000 }}"
       num_calls: 1
-      rate: "30"
+      rate: "{{ 32 }}"
       ramp: 10
       iters: 1
       timeout: 10
@@ -44,7 +44,7 @@ workload:
         timeout: 0.001
         enable: "True"
     load:
-        type: '' # Options: 'stress_ng' or 'cpulimit' or 'cpulimit_host' or '' to disable load
+        type: 'cpulimit_host' # Options: 'stress_ng' or 'cpulimit' or 'cpulimit_host' or '' to disable load
         stress_ng:
           base_seed: 1
           dockers: 4
@@ -59,17 +59,22 @@ workload:
         cpulimit_host:
           base_seed: 1
           cores: 8
-          processes_per_core: 1
-          percentage: 10
+          processes_per_core: 40
+          percentage: 20
           sleep: 0.5
     nodes:
       prme2-k8s-node-120:
         nodetype: "apache"
+        load: true
       prme3-k8s-node-120:
-        nodetype: "other"
+        nodetype: "apache"
+        load: false
       prme7-k8s-node-120:
         nodetype: "httperf"
+        load: false
       prme8-k8s-node-120:
         nodetype: "other"
+        load: false
       prme9-k8s-node-120:
         nodetype: "other"
+        load: false
