--- a/apps/vmware/roles/workload/tasks/lb/feedback/cleanup/zeromq/set_cmd.yml
+++ b/apps/vmware/roles/workload/tasks/lb/feedback/cleanup/zeromq/set_cmd.yml
@@ -1,9 +1,16 @@
 ---
 
-- name: stop zeromq-dish.py script
-  shell: pkill -u root -f zeromq-dish.py
+- name: stop zeromq-dish.sh/py scripts
+  shell: pkill -u root -f zeromq-dish
   when: '"minion" in nodes[inventory_hostname]["type"]'
   failed_when: false
+  become: true
+
+- name: remove zeromq-dish.sh script
+  file:
+    path: /usr/local/bin/zeromq-dish.sh
+    state: absent
+  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: remove zeromq-dish.py script
