--- a/apps/vmware/roles/workload/tasks/lb/feedback/setup/zeromq/set_cmd.yml
+++ b/apps/vmware/roles/workload/tasks/lb/feedback/setup/zeromq/set_cmd.yml
@@ -26,9 +26,15 @@
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
-- name: run zeromq-dish.py script
-  shell: zeromq-dish.py {{ workload.lb.apache_servers.feedback.zeromq.dish.broker.port }} {{ endpoint_port.stdout }}
-                        {{ service_address.stdout }} {{ service_port.stdout }} {{ workload.lb.apache_servers.feedback.zeromq.dish.timeout }}
-                        {{ workload.lb.apache_servers.feedback.zeromq.dish.group }} {{ workload.lb.ipvsadm.feedback.enable }} &
+- name: upload zeromq-dish.sh script
+  template:
+    src: roles/workload/templates/zeromq-dish.sh.j2
+    dest: /usr/local/bin/zeromq-dish.sh
+    mode: 0755
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
+- name: run zeromq-dish.sh script
+  shell: zeromq-dish.sh &
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
