--- a/apps/vmware/roles/workload/tasks/lb/load/cpulimit/cleanup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/cpulimit/cleanup.yml
@@ -3,32 +3,37 @@
 - name: stop inf-loop-cpulimit-rand.sh scripts
   shell: pkill -u root -f inf-loop-cpulimit-rand.sh
   failed_when: false
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   become: true
 
 - name: stop left over inf-loop.sh scripts
   shell: pkill -u root -f inf-loop.sh
   failed_when: false
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   become: true
 
 - name: remove inf-loop.sh script
   file:
     path: /usr/local/bin/inf-loop.sh
     state: absent
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   become: true
 
 - name: remove inf-loop-cpulimit.sh script
   file:
     path: /usr/local/bin/inf-loop-cpulimit.sh
     state: absent
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   become: true
 
 - name: remove inf-loop-cpulimit-rand.sh script
   file:
     path: /usr/local/bin/inf-loop-cpulimit-rand.sh
     state: absent
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache"'
+  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
+          workload.lb.nodes[inventory_hostname].load'
   become: true
