--- a/apps/vmware/roles/workload/tasks/lb/load/cpulimit_host/cleanup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/cpulimit_host/cleanup.yml
@@ -1,14 +1,7 @@
 ---
 
-- name: stop inf-loop-cpulimit-rand.sh scripts
-  shell: pkill -u root -f inf-loop-cpulimit-rand.sh
-  failed_when: false
-  when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
-          workload.lb.nodes[inventory_hostname].load'
-  delegate_to: prme-nsx-perf-00{{ prme_id }}
-
-- name: stop left over inf-loop.sh scripts
-  shell: pkill -u root -f inf-loop.sh
+- name: stop inf-loop-* scripts
+  shell: pkill -u root -f inf-loop
   failed_when: false
   when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
           workload.lb.nodes[inventory_hostname].load'
