--- a/apps/vmware/roles/workload/tasks/lb/feedback/cleanup/request_cmd.yml
+++ b/apps/vmware/roles/workload/tasks/lb/feedback/cleanup/request_cmd.yml
@@ -3,3 +3,7 @@
 - name: cleanup zeromq feedback request cmd
   include: roles/workload/tasks/lb/feedback/cleanup/zeromq/request_cmd.yml
   when: 'workload.lb.apache_servers.feedback.type == "zeromq"'
+
+- name: cleanup zeromq host feedback request cmd
+  include: roles/workload/tasks/lb/feedback/cleanup/zeromq_host/request_cmd.yml
+  when: 'workload.lb.apache_servers.feedback.type == "zeromq_host"'
