--- a/apps/vmware/roles/workload/tasks/lb/feedback/cleanup/set_cmd.yml
+++ b/apps/vmware/roles/workload/tasks/lb/feedback/cleanup/set_cmd.yml
@@ -7,3 +7,7 @@
 - name: cleanup zeromq feedback set cmd
   include: roles/workload/tasks/lb/feedback/cleanup/zeromq/set_cmd.yml
   when: 'workload.lb.apache_servers.feedback.type == "zeromq"'
+
+- name: cleanup zeromq host feedback set cmd
+  include: roles/workload/tasks/lb/feedback/cleanup/zeromq_host/set_cmd.yml
+  when: 'workload.lb.apache_servers.feedback.type == "zeromq_host"'
