--- a/apps/vmware/roles/workload/tasks/lb/load/cpulimit_host/cleanup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/cpulimit_host/cleanup.yml
@@ -5,6 +5,7 @@
   failed_when: false
   when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
           workload.lb.nodes[inventory_hostname].load'
+  with_sequence: start=0 end=3 format=%d
   delegate_to: prme-nsx-perf-00{{ prme_id }}
 
 - name: remove inf-loop.sh script
