--- a/testbeds/vmware/roles/proxmox/tasks/hosts/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/hosts/cleanup.yml
@@ -13,7 +13,7 @@
     backup: yes
 
 - name: remove essential utilities
-  shell: apt-get -y purge cpulimit expect htop tmux unzip git python-pip python-yaml python-setuptools build-essential dh-autoreconf pve-headers-`uname -r` cmake uuid-dev python-dev python-psutil
+  shell: apt-get -y purge cpulimit expect htop tmux unzip git python-pip python-yaml python-setuptools build-essential dh-autoreconf pve-headers-`uname -r` cmake uuid-dev python-dev python-psutil stress-ng
 
 - name: ensure that pve-no-subscription repository is not present in the /etc/apt/sources.list
   lineinfile:
