--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -8,19 +8,19 @@ workload:
       namespace: default
       policy: wlc
       feedback:
-        type: '' # Options: 'zeromq_host' or 'zeromq' or 'memcached' or'' to disable feedback
+        type: 'zeromq_host' # Options: 'zeromq_host' or 'zeromq' or 'memcached' or'' to disable feedback
         zeromq:
           radio:
             broker:
               address: 192.168.1.120
               port: 12345
-            timeout: 0.25 # Note: for now only works with values >= 3
+            timeout: 0.3 # Note: for now only works with values >= 3
             group: zeromq
             param: 0.5 # Options: [cpu:alpha_value]
           dish:
             broker:
               port: 12345
-            timeout: 0.25
+            timeout: 0.3
             group: zeromq
 #        memcached:
 #          namespace: default
@@ -53,7 +53,7 @@ workload:
         stress_ng_host:
           base_seed: 1
           taskset: '0,2,4,6,8,10,12,14'
-          cpus: 32
+          cpus: '{{ 8 * 48 }}'
           sleep: 0.5
         cpulimit:
           base_seed: 1
