--- a/apps/vmware/roles/workload/tasks/lb/load/stress_ng_host/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/load/stress_ng_host/setup.yml
@@ -1,16 +1,17 @@
 ---
 
-- name: copy stress-host-ng-rand.sh script
+- name: copy stress-ng-host-rand.sh script
   copy:
-    src: roles/workload/files/stress-host-ng-rand.sh
-    dest: /usr/local/bin/stress-host-ng-rand.sh
+    src: roles/workload/files/stress-ng-host-rand.sh
+    dest: /usr/local/bin/stress-ng-host-rand.sh
     mode: 0755
   when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
           workload.lb.nodes[inventory_hostname].load'
   delegate_to: prme-nsx-perf-00{{ prme_id }}
 
-- name: run stress-host-ng-rand.sh script
-  shell: stress-host-ng-rand.sh $(({{ workload.lb.load.stress_ng_host.base_seed }} + {{ prme_id }}{{ vm_id }})) {{ workload.lb.load.stress_ng_host.taskset }}  {{ workload.lb.load.stress_ng_host.cpus }} {{ workload.lb.load.stress_ng_host.sleep }} &
+- name: run stress-ng-host-rand.sh script
+  shell: stress-ng-host-rand.sh $(({{ workload.lb.load.stress_ng_host.base_seed }} + {{ workload.lb.load.stress_ng_host.options[inventory_hostname].taskset[item|int] }} + {{ prme_id }}{{ vm_id }})) {{ workload.lb.load.stress_ng_host.options[inventory_hostname].taskset[item|int] }} {{ workload.lb.load.stress_ng_host.options[inventory_hostname].cpus_per_task }} {{ workload.lb.load.stress_ng_host.sleep }} &
+  with_sequence: start=0 end={{ workload.lb.load.stress_ng_host.options[inventory_hostname].taskset|length - 1 }} format=%d
   when: '"minion" in nodes[inventory_hostname]["type"] and workload.lb.nodes[inventory_hostname].nodetype == "apache" and
           workload.lb.nodes[inventory_hostname].load'
   delegate_to: prme-nsx-perf-00{{ prme_id }}
