--- a/apps/vmware/roles/workload/tasks/lb/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/setup.yml
@@ -92,7 +92,7 @@
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
-- name: fetch dump-ipvsadm-wL-n--stats.py script
+- name: fetch dump-ipvsadm-L-n--stats.py script
   copy:
     src: roles/workload/files/dump-ipvsadm-L-n--stats.py
     dest: /usr/local/bin/dump-ipvsadm-L-n--stats.py
