--- a/testbeds/vmware/roles/proxmox/tasks/vms/hosts/add.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/vms/hosts/add.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: add hosts
-  include: roles/proxmox/tasks/vms/hosts/_add.yml
+  include_tasks: roles/proxmox/tasks/vms/hosts/_add.yml
   vars:
     proxmox_vm_id: "{{ _vm_id }}"
     proxmox_prme_id: "{{ nodes[hostname]['prme_id'] }}"
