--- a/testbeds/vmware/pingall-hosts.yml
+++ b/testbeds/vmware/pingall-hosts.yml
@@ -5,5 +5,8 @@
   gather_facts: true
 
   tasks:
-  - name: ping all prme hosts
-    ping:
+#  - name: ping all prme hosts
+#    ping:
+
+  - debug:
+      msg: "{{ hostvars[inventory_hostname]['ansible_eth5'].ipv4.address }}"
