--- a/testbeds/vmware/roles/proxmox/tasks/networking/common/install.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/common/install.yml
@@ -1,6 +1,6 @@
 ---
 
-# Note: use debian stretch in /etc/apt/sources.list for installing ovs v2.6.2 on proxmox machines
+# Note: use debian stretch in /etc/apt/sources.list for installing ovs v2.6.2 on proxmox machines (deprecated)
 
 - name: install openvswitch-switch
   apt:
