--- a/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_add_flow_rules/setup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_add_flow_rules/setup.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: setup ovs (kernel) as gateway bridge
-  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/ovs_kernel/setup.yml
+  import_tasks: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/ovs_kernel/setup.yml
   when: 'overlay_switch.bridge.type == "ovs_kernel"'
 
 - name: setup pisces as gateway bridge
-  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/pisces/setup.yml
+  import_tasks: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/pisces/setup.yml
   when: 'overlay_switch.bridge.type == "pisces"'
