--- a/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_as_gateway_bridge (deprecated)/setup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_as_gateway_bridge (deprecated)/setup.yml
@@ -1,5 +1,5 @@
 ---
 
 - name: setup ovs (kernel) as gateway bridge
-  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/switches/ovs_kernel/setup.yml
+  import_tasks: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/switches/ovs_kernel/setup.yml
   when: 'overlay_switch.bridge.type == "ovs_kernel"'
