--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/cleanup.yml
@@ -1,11 +1,11 @@
 ---
 
 - name: delete static arp entries
-  include: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/del_arp.yml remote_node="{{ item }}"
+  include_tasks: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/del_arp.yml remote_node="{{ item }}"
   with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
 
 - name: delete {{ proxmox_overlay_tunnel_type }} tunnels for each endpoint using br0
-  include: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/del_tunnel.yml remote_node="{{ item }}"
+  include_tasks: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/del_tunnel.yml remote_node="{{ item }}"
   with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
 
 - name: reset mtu size to 1500
@@ -23,4 +23,4 @@
   shell: ip route del {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
 
 - name: remove common utilities
-  include: roles/proxmox/tasks/networking/common/remove.yml
+  import_tasks: roles/proxmox/tasks/networking/common/remove.yml
