--- a/testbeds/vmware/vars/proxmox/main.yml
+++ b/testbeds/vmware/vars/proxmox/main.yml
@@ -1,6 +1,6 @@
 ---
 
-network: tor_network # Options: tor_network, vmware_switch
+network: vmware_switch # Options: tor_network, vmware_switch
 
 configs: prme-1x1-2x1-3x1-7x1-8x1-9x1
 
@@ -10,4 +10,3 @@ overlay_switch:
     type: ovs_kernel # Options: ovs_kernel, pisces
   pisces:
     p4_program: "baseerat.p4"
-
