--- a/testbeds/vmware/inventory.ini
+++ b/testbeds/vmware/inventory.ini
@@ -1,5 +1,5 @@
 [proxmox-nodes]
-prme-nsx-perf-001 prme_id=1
+;prme-nsx-perf-001 prme_id=1
 prme-nsx-perf-002 prme_id=2
 prme-nsx-perf-003 prme_id=3
 prme-nsx-perf-004 prme_id=4
