--- a/testbeds/vmware/ansible.cfg
+++ b/testbeds/vmware/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = ./inventory.ini
 host_key_checking = False
+deprecation_warnings=False
 
 [ssh_connection]
 ssh_args = -F ./ssh_config -i ./keys/vm_rsa -o ControlMaster=auto -o ControlPersist=5m -o LogLevel=QUIET
