--- a/testbeds/vmware/baseerat.yml
+++ b/testbeds/vmware/baseerat.yml
@@ -1,10 +1,11 @@
 ---
 
 - name: provision baseerat
-  hosts:  prme-nsx-perf-001
-         ,prme-nsx-perf-002
-         ,prme-nsx-perf-003
-         ,prme-nsx-perf-007
+  hosts:
+#          prme-nsx-perf-001
+#         ,prme-nsx-perf-002
+#         ,prme-nsx-perf-003
+          prme-nsx-perf-007
          ,prme-nsx-perf-008
          ,prme-nsx-perf-009
   gather_facts: true
