--- a/testbeds/vmware/baseerat_dc_tor.yml
+++ b/testbeds/vmware/baseerat_dc_tor.yml
@@ -1,9 +1,10 @@
 ---
 
 - name: provision baseerat (dc/tor)
-  hosts:  prme-nsx-perf-004
-         ,prme-nsx-perf-005
-         ,prme-nsx-perf-006
+  hosts:
+#          prme-nsx-perf-004
+#         ,prme-nsx-perf-005
+          prme-nsx-perf-006
   gather_facts: true
 
   vars_files:
