--- a/testbeds/vmware/vars/proxmox/main.yml
+++ b/testbeds/vmware/vars/proxmox/main.yml
@@ -1,8 +1,8 @@
 ---
 
-network: vmware_switch # Options: tor_network, vmware_switch
+network: tor_network # Options: tor_network, vmware_switch
 
-configs: prme-2x1-3x1-7x1-8x1-9x1
+configs: prme-1,2,3xnone-7x1-8x1-9x1
 
 overlay_switch:
   type: ovs_kernel # Options: ovs_kernel, pisces
